src/scss/theme/dark/common.scss
$colorWhite: #fff;
$colorBlack: #333;
$colorDarker: #444;
$colorMediumGrey: $colorWhite;

/*@media (prefers-color-scheme: dark) {*/
html.dark {
	body { background: $colorBlack; color: white; }

	.frame { background: $colorBlack; }

	.header.headerMainEdit { background: $colorBlack; }
	
	.popups {
		.popup {
			.innerWrap { background: $colorBlack; }
			.loaderWrapper { background: rgba(0,0,0,0); }
		}

		.popup.popupSettings .head { background: $colorBlack; }
		.popup.popupSearch .head { background: $colorBlack; }
	}

	.menus {
		.menu { background: $colorDarker; }
		.menu.vertical {
			.item { background: $colorDarker; }
			.tabs {
				.tab:hover, .tab.active { color: $colorWhite; }
			}
		}

		.menu.menuDataviewText .textarea { background: $colorDarker; }
	}

	.pageMainIndex {
		#documents {
			.item { background: $colorBlack; }
		}
	}

	.cell.isEditing .cellContent { background: $colorBlack; }

	.blocks {
		.block.blockDataview {
			.views { 
				.viewItem:hover, .viewItem.active { color: $colorWhite; }
			}

			.buttons { color: $colorWhite; }
			.buttons {
				.item:hover { color: $colorWhite; }
			}

			.viewItem.viewGallery {
				.card { border: 0px; background: $colorDarker; }
			}
		}

		.block.blockFeatured { color: $colorWhite; }

		.block.blockIconUser .iconObject { box-shadow: 0px 0px 0px 2px $colorBlack; }

		.block.blockText.code > .wrapContent > .selectable > .dropTarget { background: $colorDarker; }

		.block.blockRelation .info .name { color: #bbb; }
	}

}

